[gd_scene load_steps=6 format=3 uid="uid://ciy2eklsnpc1m"]

[ext_resource type="Script" uid="uid://dqmttt0ounlfr" path="res://scripts/ink_droplet.gd" id="1_fu0v8"]
[ext_resource type="Texture2D" uid="uid://c3eqgs30t2msc" path="res://sprites/game/particle sprites/ink drop.png" id="2_twx8y"]
[ext_resource type="PackedScene" uid="uid://cfwru6fbt68k1" path="res://scenes/particles2.tscn" id="3_twx8y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c8gtk"]
radius = 4.24264

[sub_resource type="CircleShape2D" id="CircleShape2D_81c28"]
radius = 12.0416

[node name="ink_droplet" type="CharacterBody2D" groups=["enemy_projectile"]]
collision_layer = 4
collision_mask = 19
script = ExtResource("1_fu0v8")

[node name="InkDrop" type="Sprite2D" parent="."]
position = Vector2(0, -9)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_twx8y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c8gtk")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_81c28")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Particles" parent="." instance=ExtResource("3_twx8y")]
position = Vector2(0, 12)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timeout"]
